...
            selectedIcon: const Icon(Icons.menu_book_rounded),
            label:        'Journals',
          ),
          NavigationDestination(
            icon:         const Icon(Icons.label_outlined),
            selectedIcon: const Icon(Icons.label_rounded),
            label:        'Keywords',
          ),
          NavigationDestination(
            icon:         const Icon(Icons.person_outline_rounded),
            selectedIcon: const Icon(Icons.person_rounded),
            label:        s.tabProfile,
          ),
...
